--- a/src/components/Portfolio.scss
+++ b/src/components/Portfolio.scss
@@ -13,14 +13,21 @@
 
 .Works {
     display: grid;
-    height: 100%;
+    max-height: 100%;
+    margin: 0 auto;
 
     grid-template-areas:
-        'one three'
-        'two four';
-    grid-template-rows: repeat(3, 1fr);
-    grid-template-columns: repeat(2, 1fr);
-    gap: 8px;
+        'one'
+        'two'
+        'three';
+
+    @media (min-width: 750px) {
+        grid-template-areas:
+            'one one'
+            'two three';
+    }
+
+    gap: 4px;
 
     &-one {
         grid-area: one;
@@ -40,19 +47,10 @@
 }
 
 .Work {
+    display: block;
+    max-height: 30vh;
     img {
         margin: 0;
     }
-}
-
-.coming-soon {
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    height: 100%;
-    width: 100%;
-
-    opacity: 0.8;
-    color: var(--white);
-    background-color: #111;
+    overflow: hidden;
 }
