--- a/src/components/Portfolio.scss
+++ b/src/components/Portfolio.scss
@@ -1,8 +1,7 @@
 .Portfolio {
-    background-color: var(--dim-gray);
+    background-color: var(--dimGray);
     text-align: center;
 
-    height: 97vh;
     padding: 24px;
 
     @media (min-width: 765px) {
