--- a/src/globals.scss
+++ b/src/globals.scss
@@ -16,7 +16,7 @@ body {
     --textBackground: var(--lightGray);
     --backgroundColor: var(--lightGray);
 
-    background-color: var(--backgroundColor);
+    background-color: #151515;
 }
 
 *,
