remove bottom padding on footer

--- a/src/components/Footer.scss
+++ b/src/components/Footer.scss
@@ -2,7 +2,7 @@
     background-color: #151515;
     text-align: center;
     width: 100%;
-    padding: 24px;
+    padding: 24px 24px 0 24px;
 
     p {
         color: var(--white);
